WIP - setup for plan list
